Outliner "Show Active" frames object instead of bone for Bones on hidden layers in Pose Mode. #92930

Closed
opened 2021-11-08 17:21:25 +01:00 by Konstantins Visnevskis · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash: a791bdabd0

Short description of error
In Pose Mode, Outliner "Show Active" frames the selected object instead of selected bone, if Bone is on a layer hidden for viewport.

Exact steps for others to reproduce the error
bone-layers.blend

  • In Outliner, select any of the Bones named starting with Layer_2_ and press Show Active.
  • The Object, not the Bone gets centered.
    Works for Edit Mode (which doesn't mach in position).
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash: `a791bdabd0` **Short description of error** In Pose Mode, Outliner "Show Active" frames the selected object instead of selected bone, if Bone is on a layer hidden for viewport. **Exact steps for others to reproduce the error** [bone-layers.blend](https://archive.blender.org/developer/F11769320/bone-layers.blend) - In Outliner, select any of the Bones named starting with Layer_2_ and press Show Active. - The Object, not the Bone gets centered. Works for Edit Mode (which doesn't mach in position).

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-11-09 10:40:31 +01:00
Member

Can confirm, will check.

Can confirm, will check.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Similar to issues reported in e.g. #58068 and #80464, this is due to the fact that BKE_pose_channel_active always checks for the armature layer (and returns NULL if a bone is not on a visible armature layer).
Would propose to make this layer check optional (and e.g. from the Outliner be more permissive).
@dr.sybren : think that approach is OK?

Similar to issues reported in e.g. #58068 and #80464, this is due to the fact that `BKE_pose_channel_active` always checks for the armature layer (and returns NULL if a bone is not on a visible armature layer). Would propose to make this layer check **optional** (and e.g. from the Outliner be more permissive). @dr.sybren : think that approach is OK?

This issue was referenced by d13970de86

This issue was referenced by d13970de8627bab29458a6eef951a84a7962b38a

I think it's a good idea to have this behaviour consistent between objects and bones. When hidden, the active object becomes deselected, but it remains active. Having bones consistent with this behaviour would indeed require BKE_pose_channel_active to return the active bone, even when it's invisible. Also from the outliner point of view it makes sense, as there the bone is "visible" (as in, you can see it mentioned in the outliner) even when it is on a hidden bone layer.

So yes, that approach seems OK to me!

I think it's a good idea to have this behaviour consistent between objects and bones. When hidden, the active object becomes deselected, but it remains active. Having bones consistent with this behaviour would indeed require `BKE_pose_channel_active` to return the active bone, even when it's invisible. Also from the outliner point of view it makes sense, as there the bone is "visible" (as in, you can see it mentioned in the outliner) even when it is on a hidden bone layer. So yes, that approach seems OK to me!
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92930
No description provided.